Modified restaurant entry PATCH operation API - introduced full update functionality in addition to just renaming the item
