# src/main/resources/api/openapi.yaml
@@ -14,7 +14,7 @@ paths:
     get:
       summary: Query restaurants by criteria
       operationId: queryRestaurantsByCriteria
-      tags: [Restaurants]
+      tags: [ Restaurants ]
       x-contracts:
         - contractId: get-all-params
           name: Query with all parameters
@@ -62,12 +62,12 @@ paths:
             - contractId: get-all-params
               body:
                 - name: KFC City Centre
-                  categories: ['FAST_FOOD', 'CHICKEN']
+                  categories: [ 'FAST_FOOD', 'CHICKEN' ]
                   triedBefore: true
                   rating: 4
                   review: 'Not my gig'
                 - name: KFC Some Street
-                  categories: ['FAST_FOOD', 'CHICKEN']
+                  categories: [ 'FAST_FOOD', 'CHICKEN' ]
                   triedBefore: true
                   rating: 5
         400:
@@ -77,7 +77,7 @@ paths:
     post:
       summary: Create a restaurant entry
       operationId: createRestaurant
-      tags: [Restaurants]
+      tags: [ Restaurants ]
       x-contracts:
         - contractId: create-not-visited
           name: Create a restaurant for future visit
@@ -94,11 +94,11 @@ paths:
           - contractId: create-not-visited
             body:
               name: Trattoria Napoli
-              categories: ['PIZZA']
+              categories: [ 'PIZZA' ]
           - contractId: create-visited
             body:
               name: KFC Westfield Arkadia
-              categories: ['FAST_FOOD', 'CHICKEN']
+              categories: [ 'FAST_FOOD', 'CHICKEN' ]
               rating: 4
               review: 'Not my gig'
               notes:
@@ -130,7 +130,7 @@ paths:
     get:
       summary: Get restaurant details
       operationId: getRestaurantDetails
-      tags: [Restaurant entry]
+      tags: [ Restaurant entry ]
       x-contracts:
         - contractId: get-by-name
           name: Get restaurant details
@@ -159,9 +159,9 @@ paths:
           x-contracts:
             - contractId: try-to-get-non-existent
     patch:
-      summary: Rename the restaurant
-      operationId: renameRestaurant
-      tags: [Restaurant entry]
+      summary: Update the restaurant
+      operationId: updateRestaurant
+      tags: [ Restaurant entry ]
       x-contracts:
         - contractId: rename
           name: Successfully rename restaurant
@@ -180,12 +180,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                name:
-                  type: string
-              required:
-                - name
+              $ref: '#/components/schemas/RestaurantData'
         x-contracts:
           - contractId: rename
             body:
@@ -200,10 +195,24 @@ paths:
             body:
               name: KFC Some Street
       responses:
-        204:
+        200:
           description: Restaurant renamed
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RestaurantData'
           x-contracts:
             - contractId: rename
+              body:
+                name: Trattoria Napoli
+                triedBefore: true
+                rating: 4
+                review: Not my gig
+                notes: ['Try to avoid it']
+            # TODO full update contract
+        204:
+          description: Restaurant not changed
+          x-contracts:
             - contractId: rename-to-same-name
         404:
           description: Restaurant with given name not found
@@ -216,7 +225,7 @@ paths:
     delete:
       summary: Delete the restaurant entry
       operationId: deleteRestaurant
-      tags: [Restaurant entry]
+      tags: [ Restaurant entry ]
       x-contracts:
         - contractId: delete
           name: Successfully delete restaurant
@@ -240,7 +249,7 @@ paths:
       summary: Update rating of the restaurant
       description: Additionally marks the restaurant as tried
       operationId: updateRestaurantRating
-      tags: [Restaurant entry]
+      tags: [ Restaurant entry ]
       x-contracts:
         - contractId: update-rating
           name: Successfully change rating
@@ -304,7 +313,7 @@ paths:
       summary: Update review of the restaurant
       description: Additionally marks the restaurant as tried
       operationId: updateRestaurantReview
-      tags: [Restaurant entry]
+      tags: [ Restaurant entry ]
       x-contracts:
         - contractId: update-review
           name: Successfully update the review
@@ -342,7 +351,7 @@ paths:
     delete:
       summary: Delete review of the restaurant
       operationId: deleteRestaurantReview
-      tags: [Restaurant entry]
+      tags: [ Restaurant entry ]
       x-contracts:
         - contractId: delete-review
           name: Successfully remove the review
@@ -365,7 +374,7 @@ paths:
     post:
       summary: Mark restaurant as tried
       operationId: markRestaurantAsTried
-      tags: [Restaurant entry]
+      tags: [ Restaurant entry ]
       x-contracts:
         - contractId: mark-as-tried
           name: Successfully mark the restaurant as tried
@@ -386,7 +395,7 @@ paths:
       summary: Mark restaurant as not tried
       operationId: markRestaurantAsNotTried
       description: Additionally removes the review and rating from the restaurant entry
-      tags: [Restaurant entry]
+      tags: [ Restaurant entry ]
       x-contracts:
         - contractId: mark-as-not-tried
           name: Successfully mark the restaurant as not tried
@@ -409,7 +418,7 @@ paths:
     post:
       summary: Add a category
       operationId: addRestaurantCategory
-      tags: [Restaurant entry]
+      tags: [ Restaurant entry ]
       x-contracts:
         - contractId: add-category
           name: Successfully add a category
@@ -454,9 +463,9 @@ paths:
                   $ref: '#/components/schemas/Category'
           x-contracts:
             - contractId: add-category
-              body: ['SANDWICH', 'CHICKEN', 'FAST_FOOD']
+              body: [ 'SANDWICH', 'CHICKEN', 'FAST_FOOD' ]
             - contractId: add-already-exitent-category
-              body: ['CHICKEN', 'FAST_FOOD']
+              body: [ 'CHICKEN', 'FAST_FOOD' ]
         404:
           description: Restaurant with given name not found
           x-contracts:
@@ -464,7 +473,7 @@ paths:
     put:
       summary: Replace categories
       operationId: replaceRestaurantCategories
-      tags: [Restaurant entry]
+      tags: [ Restaurant entry ]
       x-contracts:
         - contractId: replace-categories
           name: Successfully replace categories
@@ -484,9 +493,9 @@ paths:
                 $ref: '#/components/schemas/Category'
         x-contracts:
           - contractId: replace-categories
-            body: [FAST_FOOD, SANDWICH, CHICKEN, BURGER, OTHER]
+            body: [ FAST_FOOD, SANDWICH, CHICKEN, BURGER, OTHER ]
           - contractId: try-to-replace-categories-for-non-existent
-            body: [FAST_FOOD, BURGER, CHICKEN]
+            body: [ FAST_FOOD, BURGER, CHICKEN ]
       responses:
         204:
           description: Categories replaced
@@ -507,7 +516,7 @@ paths:
     delete:
       summary: Remove the category
       operationId: removeRestaurantCategory
-      tags: [Restaurant entry]
+      tags: [ Restaurant entry ]
       x-contracts:
         - contractId: delete-category
           name: Successfully delete category
@@ -534,7 +543,7 @@ paths:
     post:
       summary: Add a note
       operationId: addRestaurantNote
-      tags: [Restaurant entry]
+      tags: [ Restaurant entry ]
       x-contracts:
         - contractId: add-note
           name: Successfully add note
@@ -572,7 +581,7 @@ paths:
                   type: string
           x-contracts:
             - contractId: add-note
-              body: ['Try to avoid it', 'Note text to add']
+              body: [ 'Try to avoid it', 'Note text to add' ]
         404:
           description: Restaurant with given name not found
           x-contracts:
@@ -588,7 +597,7 @@ paths:
     put:
       summary: Replace the note
       operationId: replaceRestaurantNote
-      tags: [Restaurant entry]
+      tags: [ Restaurant entry ]
       x-contracts:
         - contractId: replace-note
           name: Successfully replace note
@@ -637,7 +646,7 @@ paths:
                   type: string
           x-contracts:
             - contractId: replace-note
-              body: ['Replaced note text']
+              body: [ 'Replaced note text' ]
         400:
           description: Note index is less than 0 or greater than last note index
           x-contracts:
@@ -650,7 +659,7 @@ paths:
     delete:
       summary: Remove the note
       operationId: removeRestaurantNote
-      tags: [Restaurant entry]
+      tags: [ Restaurant entry ]
       x-contracts:
         - contractId: delete-note
           name: Successfully delete note
@@ -729,10 +738,3 @@ components:
       required: true
       schema:
         type: string
-  responses:
-    RestaurantResponse:
-      description: OK
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/RestaurantData'
